filter() function doesn't work with CSS gradients https://bugs.webkit.org/show_bug.cgi?id=250303 rdar://104018718

Reviewed by Antoine Quint.

There was a check in StyleGradientImage returning null if there was no client. Forwarding the client from StyleFilterImage to
StyleGradientImage fixes the issue.

There is also a similar assertion failure when using -webkit-canvas + filter() that is fixed by this patch.

* Source/WebCore/rendering/style/StyleFilterImage.cpp:
(WebCore::StyleFilterImage::didAddClient):
(WebCore::StyleFilterImage::didRemoveClient):
* Source/WebCore/rendering/style/StyleFilterImage.h:
* LayoutTests/fast/filter-image/webkit-canvas-in-filter-function-expected.html: Added.
* LayoutTests/fast/filter-image/webkit-canvas-in-filter-function.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-conic-gradient-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-conic-gradient-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-conic-gradient.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-linear-gradient-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-linear-gradient-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-linear-gradient.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-radial-gradient-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-radial-gradient-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-radial-gradient.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-repeating-conic-gradient-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-repeating-conic-gradient-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-repeating-conic-gradient.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-repeating-linear-gradient-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-repeating-linear-gradient-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-repeating-linear-gradient.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-repeating-radial-gradient-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-repeating-radial-gradient-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-function/filter-function-repeating-radial-gradient.html: Added.