Source/WebCore/rendering/style/StyleFilterImage.h
@@ -59,8 +59,8 @@ private:
     RefPtr<Image> image(const RenderElement*, const FloatSize&) const final;
     bool knownToBeOpaque(const RenderElement&) const final;
     FloatSize fixedSize(const RenderElement&) const final;
-    void didAddClient(RenderElement&) final { }
-    void didRemoveClient(RenderElement&) final { }
+    void didAddClient(RenderElement&) final;
+    void didRemoveClient(RenderElement&) final;
 
     // CachedImageClient.
     void imageChanged(CachedImage*, const IntRect* = nullptr) final;
